# brofiler

./: .gitignore  CMakeAndroid.bat  CMakeAndroid_Debug.bat  CMakeCache.txt  CMakeLists.txt  MakeAndroid.bat  Posix_Time.h
Brofiler/: App.xaml  Brofiler.csproj  GlobalSettings.cs  MainWindow.xaml  MainWindow.xaml.cs  MaskSetting.xaml  MaskSetting.xaml.cs  ProfilerClient.cs  app.config
Brofiler/Controls/: PlatformSelector.xaml.cs  SplitButton.cs
Brofiler/Counter/: CounterPlot.xaml  CounterPlot.xaml.cs  CounterView.xaml  CounterView.xaml.cs
Brofiler/Data/: Counter.cs  Durationable.cs  EventBoard.cs  EventData.cs  EventDescription.cs  EventFrame.cs  FrameCollection.cs  SourceView.cs  Synchronization.cs
Brofiler/Frames/: FrameDataTable.xaml  FrameInfo.xaml  SourceViewControl.xaml  SourceViewControl.xaml.cs
Brofiler/Message/: Message.cs
Brofiler/Platform/: Platform.cs
Brofiler/Properties/: Settings.Designer.cs  Settings.settings
Brofiler/ThreadView/: EventsThreadRow.cs  ThreadRow.cs  ThreadView.xaml  ThreadView.xaml.cs
Brofiler/TimeLine/: TimeLine.xaml  TimeLine.xaml.cs  TimeLineItem.xaml  TimeLineItem.xaml.cs
Brofiler/themes/: Brushes.xaml  SplitButtonStyle.xaml
BrofilerCore/: Brofiler.h  CMakeLists.txt  Common.h  Config.h  Core.cpp  Core.h  Counter.cpp  Counter.h  Event.cpp  Event.h  EventDescriptionBoard.cpp  EventDescriptionBoard.h  Interop.cpp  MemoryPool.h  Message.cpp  Message.h  ProfilerServer.cpp  ProfilerServer.h  Serialization.cpp  Serialization.h  Singleton.h  Socket.h  Thread.h
BrofilerCore/Platform/: Common.h  Log.cpp  Log.h  Memory.h  Platform.h  Posix_Memory.h  Posix_Mutex.h  Posix_Thread.h  Posix_Time.h  Posix_Tls.h  SamplingProfiler.h  SchedulerTrace.h  SymbolEngine.h  Thread.h  ThreadsEnumerator.h  Win_Mutex.h  Win_Time.h  Win_Tls.h
BrofilerIOSTest/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  GameViewController.h  GameViewController.m  GameViewController.mm  main.m
BrofilerIOSTest/Shaders/: Shader.fsh  Shader.vsh
BrofilerLinuxTest/: BrofilerLinuxTest  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
BrofilerTest/: CMakeLists.txt  TestEngine.cpp  TestEngine.h
BrofilerWindowsTest/: CMakeLists.txt  main.cpp
CMake/: Common.cmake  CopyFiles.cmake  IOSBundleInfo.plist.in
CMake/Toolchain/: Android_ndk10.cmake  android.toolchain_ndk10.cmake  iOS_Standard.cmake
